--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <!-- App JavaScript -->
-  <script type="module" src="assets/js/main.js"></script>
+  <script type="module" src="core/app.js"></script>
 </body>
 
 </html>
