refactor: replace custom tags with UI components for navbar, footer, and toast notifications

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body class="d-flex flex-column min-vh-100">
   <!-- The Navigation Component -->
-  <t-navbar></t-navbar>
+  <ui-navbar></ui-navbar>
 
   <!-- The Main Content Area -->
   <main id="page-content" class="container flex-grow-1">
@@ -29,23 +29,10 @@
   </main>
 
   <!-- The Footer Component -->
-  <t-footer></t-footer>
+  <ui-footer></ui-footer>
 
   <!-- Toast Notifications -->
-  <div class="toast-container position-fixed top-0 end-0 p-3">
-    <div id="app-toast" class="toast" role="alert">
-      <div class="toast-header">
-        <span><!-- Icon will be added here --></span>
-        <strong class="me-auto">
-          <!-- Toast title will be inserted here -->
-        </strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
-      </div>
-      <div class="toast-body" id="toast-body">
-        <!-- Toast message will be inserted here -->
-      </div>
-    </div>
-  </div>
+  <ui-toast></ui-toast>
 
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
