refactor: update heading styles and layout for consistency across pages

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -1,5 +1,8 @@
-<section class="m-2">
-  <h2 id="greeting"></h2>
+<section class="container m-2 mx-auto">
+
+  <h2 id="greeting">
+    <!-- Set in settings.js -->
+  </h2>
   <p class="lead">Welcome to your Game Collection App!</p>
 
   <div class="row g-3">
