--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <ui-navbar></ui-navbar>
 
   <!-- The Main Content Area -->
-  <main id="page-content" class="container flex-grow-1">
+  <main id="page-content" class="flex-grow-1">
     <!-- Content is loaded here -->
   </main>
 
