refactor: enhance game details form handling and validation with toast notifications

--- a/assets/html/game-details.html
+++ b/assets/html/game-details.html
@@ -1,19 +1,28 @@
-<section id="game-details-container" class="mt-2">
-  <h2 class="mb-3">Game Details</h2>
+<section id="game-details-container" class="container my-2 mx-auto">
+
+  <h2 class="display-3 mb-3">Game Details</h2>
+
   <form id="game-edit-form" class="row">
-    <fieldset>
+
+    <fieldset class="col-lg-6">
       <legend>Game Info</legend>
-      <div id="game-info-set" class="row"></div>
-      <!-- Game Form Fields -->
+      <div id="game-info-set" class="row">
+        <!-- Game Form Fields -->
+      </div>
     </fieldset>
-    <fieldset>
+
+    <fieldset class="col-lg-6">
       <legend>Collection Info</legend>
-      <div id="game-collection-info-set" class="row"></div>
-      <!-- Game Form Fields -->
+      <div id="game-collection-info-set" class="row">
+        <!-- Game Form Fields -->
+      </div>
     </fieldset>
+
     <div class="col-12 text-end">
-      <button id="save-btn" type="button" class="btn btn-primary">💾 Save</button>
+      <button id="save-btn" class="btn btn-primary">💾 Save</button>
       <button id="save-btn" type="reset" class="btn btn-warning">🗑️ Clear</button>
     </div>
+
   </form>
+
 </section>
